--- a/framework_calibrating_ecosystem_models.bib
+++ b/framework_calibrating_ecosystem_models.bib
@@ -310,7 +310,7 @@ eprint = {
 % Sequential Design and Optimization
 % ---------------------------------------------------------------------------------------------------
 
-% To my knowledge, first to propose an EIVAR-type criterion. 
+% Propose EIVAR-type criterion. 
 @article{SinsbeckNowak,
 author = {Sinsbeck, Michael and Nowak, Wolfgang},
 title = {Sequential Design of Computer Experiments for the Solution of Bayesian Inverse Problems},
@@ -331,7 +331,7 @@ abstract = { We present a sequential design strategy for efficient sampling of m
 }
 
 % EIVAR paper; computes EIVAR for the Higdon et al PCA-based emulation approach. 
-@misc{sürer2023sequential,
+@misc{Surer2023sequential,
       title={Sequential Bayesian experimental design for calibration of expensive simulation models}, 
       author={Özge Sürer and Matthew Plumlee and Stefan M. Wild},
       year={2023},
@@ -341,7 +341,7 @@ abstract = { We present a sequential design strategy for efficient sampling of m
 }
 
 % Proposes an EIVAR-like acquisition but uses KL-divergence instead of prior-weighted L2 
-@inproceedings{10.5555/2832747.2832752,
+@inproceedings{KandasamyActiveLearning2015,
 author = {Kandasamy, Kirthevasan and Schneider, Jeff and P\'{o}czos, Barnab\'{a}s},
 title = {Bayesian Active Learning for Posterior Estimation},
 year = {2015},
@@ -376,13 +376,12 @@ url="https://doi.org/10.1007/978-3-642-10701-6_6"
 
 
 % Utilize Ensemble Kalman Inversion (EKI) or Ensemble Kalman Sampling (EKI) as cheap design method. 
-@article{Cleary_2021,
+@article{Cleary2021,
 	doi = {10.1016/j.jcp.2020.109716},
 	url = {https://doi.org/10.1016\%2Fj.jcp.2020.109716},  
 	year = 2021,
 	month = {jan},  
-	publisher = {Elsevier {BV}
-},  
+	publisher = {Elsevier {BV}},  
 	volume = {424},  
 	pages = {109716},  
 	author = {Emmet Cleary and Alfredo Garbuno-Inigo and Shiwei Lan and Tapio Schneider and Andrew M. Stuart},  
@@ -462,13 +461,12 @@ doi = {10.1080/00401706.2014.881749}
 }
 
 % TODO: need to read
-@article{Huan_2013,
+@article{Huan2013,
 	doi = {10.1016/j.jcp.2012.08.013},
 	url = {https://doi.org/10.1016%2Fj.jcp.2012.08.013},  
 	year = 2013,
 	month = {jan},  
-	publisher = {Elsevier {BV}
-},  
+	publisher = {Elsevier {BV}},  
 	volume = {232},  
 	number = {1},  
 	pages = {288--317},
@@ -507,9 +505,27 @@ doi = {10.1080/00401706.2014.881749}
       primaryClass={stat.ME}
 }
 
+% Derive closed-form expression for multi-point EI. 
+@inproceedings{Chevalier2013,
+author = {Chevalier, Clément},
+year = {2013},
+month = {01},
+pages = {},
+title = {Fast Computation of the Multi-Points Expected Improvement with Applications in Batch Selection},
+isbn = {978-3-642-44972-7},
+doi = {10.1007/978-3-642-44973-4_7}
+}
 
-
-
+% Derive an expression for the gradient of the closed-form multi-point EI. 
+@inproceedings{Marmin2015,
+author = {Marmin, Sébastien and Chevalier, Clément and Ginsbourger, David},
+year = {2015},
+month = {03},
+pages = {},
+title = {Differentiating the Multipoint Expected Improvement for Optimal Batch Design},
+isbn = {978-3-319-27925-1},
+doi = {10.1007/978-3-319-27926-8_4}
+}
 
 
 
