Progress on meeting prep.

--- a/framework_calibrating_ecosystem_models.bib
+++ b/framework_calibrating_ecosystem_models.bib
@@ -527,7 +527,15 @@ isbn = {978-3-319-27925-1},
 doi = {10.1007/978-3-319-27926-8_4}
 }
 
-
+% Hierarchical EI
+@misc{chen2023hierarchical,
+      title={A hierarchical expected improvement method for Bayesian optimization}, 
+      author={Zhehui Chen and Simon Mak and C. F. Jeff Wu},
+      year={2023},
+      eprint={1911.07285},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
 
 
 
