--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -196,8 +196,6 @@ emulator_info_list <- list(gp_fits = gp_fits,
 
 
 
-
-
 ## Sample approximate posterior. 
 ```{r}
 N_mcmc_approx <- 50000
@@ -265,34 +263,10 @@ gp_pred_grid <- predict_independent_GPs(X_pred = prior_grid_info$inputs_scaled,
 ```
 
 ```{r}
-# Evaluate acquisitions over grid of points. 
-acq_grid_EI_lpost_MC <- acquisition_EI_lpost_MC(theta_vals = prior_grid_info$inputs_scaled, 
-                                                emulator_info_list = emulator_info_list, 
-                                                computer_model_data = computer_model_data, 
-                                                theta_prior_params = theta_prior_params, 
-                                                sig2_eps = sig2_eps_estimates, 
-                                                threshold_lpost = lpost_max, 
-                                                N_MC_samples = 1000, 
-                                                gp_pred_list = gp_pred_grid)
-
-acq_grid_VAR_lpost <- acquisition_VAR_lpost(theta_vals = prior_grid_info$inputs_scaled, 
-                                            emulator_info_list = emulator_info_list, 
-                                            sig2_eps = sig2_eps_estimates)
-
-acq_grid_EIVAR_prior_lpost <- acquisition_EIVAR_lpost(theta_vals = prior_grid_info$inputs_scaled, 
-                                                      emulator_info_list = emulator_info_list, 
-                                                      theta_prior_params = theta_prior_params, 
-                                                      sig2_eps = sig2_eps_estimates, 
-                                                      theta_grid_integrate = prior_grid_info$inputs_scaled)
-
-# Randomly sub-sampling approx MCMC output; this could be an opportunity to apply something like support points/Stein points instead. 
-round1_subsample_sel <- sample(1:nrow(samp_round1_theta), size = nrow(prior_grid_info$inputs_scaled), replace = FALSE)
-acq_grid_EIVAR_approxpost_lpost <- acquisition_EIVAR_lpost(theta_vals = prior_grid_info$inputs_scaled, 
-                                                           emulator_info_list = emulator_info_list, 
-                                                           theta_prior_params = theta_prior_params, 
-                                                           sig2_eps = sig2_eps_estimates, 
-                                                           theta_grid_integrate = scale_input_data(samp_round1_theta[round1_subsample_sel,,drop=FALSE], 
-                                                                                                   input_bounds = design_info$input_bounds))
+# Get lpost emulator object. 
+lpost_emulator <- get_lpost_emulator_obj(emulator_info_list = emulator_info_list, design_info_list = design_info, 
+                                         computer_model_data = computer_model_data, sig2_eps = sig_eps_estimates, 
+                                         theta_prior_params = theta_prior_params)
 ```
 
 
@@ -303,95 +277,50 @@ acq_grid_EIVAR_approxpost_lpost <- acquisition_EIVAR_lpost(theta_vals = prior_gr
 N_candidate_points <- 10000
 round1_candidate_sel <- sample(1:nrow(samp_round1_theta), size = N_candidate_points, replace = FALSE)
 round1_candidate_samp <- samp_round1_theta[round1_candidate_sel,,drop=FALSE]
+round1_candidate_samp_scaled <- scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds)
                                                                                                    
 # Integration points. 
 N_integrate_points <- 3000
 round1_integrate_sel <- sample(1:nrow(samp_round1_theta), size = N_integrate_points, replace = FALSE)
 round1_integrate_samp <- samp_round1_theta[round1_integrate_sel,,drop=FALSE]
+round1_integrate_samp_scaled <- scale_input_data(round1_integrate_samp, input_bounds = design_info$input_bounds)
 
-acq_grid_EI_lpost_MC <- acquisition_EI_lpost_MC(theta_vals = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
-                                                emulator_info_list = emulator_info_list, 
-                                                computer_model_data = computer_model_data, 
-                                                theta_prior_params = theta_prior_params, 
-                                                sig2_eps = sig2_eps_estimates, 
-                                                threshold_lpost = lpost_max, 
-                                                N_MC_samples = 1000)
 
-acq_grid_EI_lpost <- acquisition_EI_lpost_MC(theta_vals = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
-                                             emulator_info_list = emulator_info_list, 
-                                             computer_model_data = computer_model_data, 
-                                             theta_prior_params = theta_prior_params, 
-                                             sig2_eps = sig2_eps_estimates, 
-                                             threshold_lpost = lpost_max)
-                                                                                           
-acq_grid_VAR_lpost <- acquisition_VAR_lpost(theta_vals = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
-                                            emulator_info_list = emulator_info_list, 
-                                            sig2_eps = sig2_eps_estimates)
+acq_grid_EI_lpost <- acquisition_EI_lpost(theta_vals = round1_candidate_samp_scaled, lpost_emulator = lpost_emulator)
+acq_grid_VAR_lpost <- acquisition_VAR_lpost(theta_vals = round1_candidate_samp_scaled, lpost_emulator = lpost_emulator)
+acq_grid_EIVAR_lpost <- acquisition_EIVAR_lpost(theta_vals = round1_candidate_samp_scaled, lpost_emulator = lpost_emulator, 
+                                                theta_grid_integrate = round1_integrate_samp_scaled)
 
-acq_grid_VAR_post <- acquisition_VAR_post(theta_vals = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
-                                          emulator_info_list = emulator_info_list, 
-                                          computer_model_data = computer_model_data,
-                                          theta_prior_params = theta_prior_params, 
-                                          sig2_eps = sig2_eps_estimates)
-
-acq_grid_EIVAR_approxpost_lpost <- acquisition_EIVAR_lpost(theta_vals = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
-                                                           emulator_info_list = emulator_info_list, 
-                                                           sig2_eps = sig2_eps_estimates, 
-                                                           theta_grid_integrate = scale_input_data(round1_integrate_samp, input_bounds = design_info$input_bounds))
 ```
 
 
 ```{r}
 # Plot heatmaps.
 
-acq_EI_lpost_MC_plt <- get_2d_heatmap_plot(X = round1_candidate_samp, 
-                                           y = acq_grid_EI_lpost_MC, 
-                                           param_names = computer_model_data$pars_cal_names, 
-                                           samples_kde = samp_exact_theta, 
-                                           samples_points = design_info$inputs,  
-                                           raster = FALSE, 
-                                           point_coords = computer_model_data$theta_true, 
-                                           main_title = "Expected Improvement lpost (Monte Carlo approximation)", 
-                                           bigger_is_better = TRUE, 
-                                           legend_label = "EI")
-
-acq_VAR_lpost_plt <- get_2d_heatmap_plot(X = round1_candidate_samp, 
-                                         y = acq_grid_VAR_lpost, 
-                                         param_names = computer_model_data$pars_cal_names, 
-                                         samples_kde = samp_exact_theta, 
-                                         samples_points = design_info$inputs,  
-                                         raster = FALSE, 
-                                         point_coords = computer_model_data$theta_true, 
-                                         main_title = "VAR-lpost", 
-                                         bigger_is_better = TRUE, 
-                                         legend_label = "VAR")
-
-acq_VAR_post_plt <- get_2d_heatmap_plot(X = round1_candidate_samp, 
-                                        y = acq_grid_VAR_post, 
+acq_EI_lpost_plt <- get_2d_heatmap_plot(X = round1_candidate_samp, 
+                                        y = acq_grid_EI_lpost, 
                                         param_names = computer_model_data$pars_cal_names, 
                                         samples_kde = samp_exact_theta, 
                                         samples_points = design_info$inputs,  
                                         raster = FALSE, 
                                         point_coords = computer_model_data$theta_true, 
-                                        main_title = "VAR-post", 
+                                        main_title = "Expected Improvement lpost", 
+                                        bigger_is_better = TRUE, 
+                                        legend_label = "EI")
+
+acq_VAR_lpost_plt <- get_2d_heatmap_plot(X = round1_candidate_samp, 
+                                        y = acq_grid_VAR_lpost, 
+                                        param_names = computer_model_data$pars_cal_names, 
+                                        samples_kde = samp_exact_theta, 
+                                        samples_points = design_info$inputs,  
+                                        raster = FALSE, 
+                                        point_coords = computer_model_data$theta_true, 
+                                        main_title = "VAR lpost", 
                                         bigger_is_better = TRUE, 
                                         legend_label = "VAR")
 
-acq_EIVAR_approxpost_lpost_plt <- get_2d_heatmap_plot(X = round1_candidate_samp, 
-                                                      y = acq_grid_EIVAR_approxpost_lpost, 
-                                                      param_names = computer_model_data$pars_cal_names, 
-                                                      samples_kde = samp_exact_theta, 
-                                                      samples_points = design_info$inputs,  
-                                                      raster = FALSE, 
-                                                      point_coords = computer_model_data$theta_true, 
-                                                      main_title = "EIVAR-approx-post lpost", 
-                                                      bigger_is_better = TRUE, 
-                                                      legend_label = "EIVAR (weighted by approx posterior)")
-
-plot(acq_EI_lpost_MC_plt)
+plot(acq_EI_lpost_plt)
 plot(acq_VAR_lpost_plt)
-plot(acq_VAR_post_plt)
-plot(acq_EIVAR_approxpost_lpost_plt)
 ```
 
 ```{r}
